--- a/app/src/main/res/layout/fragment_matrix_input.xml
+++ b/app/src/main/res/layout/fragment_matrix_input.xml
@@ -159,7 +159,7 @@
             style="@style/Widget.AppCompat.Button.Colored"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/circleempty"
+            android:background="@drawable/circlenotempty"
             android:layout_alignParentRight="true"
             android:text="@string/eval"/>
     </RelativeLayout>
